crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__delay.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam builtin_1
  (force
    (delay
      [[(builtin addInteger)
        (force [[builtin_1 (con string "same")] (delay (con integer 20))])]
        (force [[builtin_1 (con string "same")] (delay (con integer 22))])])))
  (force (builtin trace))]
--- uplc after
[(lam builtin_1
  [(lam partial_2
    (force
      (delay
        [[(builtin addInteger) (force [partial_2 (delay (con integer 20))])]
          (force [partial_2 (delay (con integer 22))])])))
    [builtin_1 (con string "same")]])
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["same", "same"]
