crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__discarded.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
assertion_line: 34
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
case@Bool true of
  True -> 42
  False -> 0
  _ -> addInteger (trace "same" in 20) (trace "same" in 22)
--- unoptimized UPLC
(program 1.1.0 (case (con bool True) (con integer 0) (con integer 42)))
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- uplc before
(case (con bool True) (con integer 0) (con integer 42))
--- uplc after
(case (con bool True) (con integer 0) (con integer 42))
--- result
(con integer 42)
--- logs
[]
