crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__trace.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
assertion_line: 34
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
trace "before" in addInteger (trace "same" in 20) (trace "same" in 22)
--- unoptimized UPLC
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "before")]
      (delay
        [[(builtin addInteger)
          (force [[(force (builtin trace)) (con string "same")] (delay (con integer 20))])]
          (force [[(force (builtin trace)) (con string "same")] (delay (con integer 22))])])]))
--- optimized Core
trace "before" in let anf#1 : int = trace "same" in 20 in
let anf#2 : int = trace "same" in 22 in
addInteger anf#1 anf#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam partial_6
      (force
        [[builtin_5 (con string "before")]
          (delay
            [(lam anf_3
              [(lam anf_4 [[(builtin addInteger) anf_3] anf_4])
                (force [partial_6 (delay (con integer 22))])])
              (force [partial_6 (delay (con integer 20))])])]))
      [builtin_5 (con string "same")]])
    (force (builtin trace))])
--- isolated pass
--- uplc before
[(lam builtin_1
  (force
    [[builtin_1 (con string "before")]
      (delay
        [[(builtin addInteger)
          (force [[builtin_1 (con string "same")] (delay (con integer 20))])]
          (force [[builtin_1 (con string "same")] (delay (con integer 22))])])]))
  (force (builtin trace))]
--- uplc after
[(lam builtin_1
  [(lam partial_2
    (force
      [[builtin_1 (con string "before")]
        (delay
          [[(builtin addInteger) (force [partial_2 (delay (con integer 20))])]
            (force [partial_2 (delay (con integer 22))])])]))
    [builtin_1 (con string "same")]])
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["before", "same", "same"]
