crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__trailing.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam builtin_1
  [[(builtin addInteger)
    [[(builtin subtractInteger)
      (force [[builtin_1 (con string "left")] (delay (con integer 100))])]
      (con integer 1)]]
    [[(builtin subtractInteger)
      (force [[builtin_1 (con string "right")] (delay (con integer 99))])]
      (con integer 1)]])
  (force (builtin trace))]
--- uplc after
[(lam builtin_1
  [[(builtin addInteger)
    [[(builtin subtractInteger)
      (force [[builtin_1 (con string "left")] (delay (con integer 100))])]
      (con integer 1)]]
    [[(builtin subtractInteger)
      (force [[builtin_1 (con string "right")] (delay (con integer 99))])]
      (con integer 1)]])
  (force (builtin trace))]
--- result
(con integer 197)
--- logs
["left", "right"]
